# DataFlow

./: .bazelrc  .buildifier  .clang-format  .clangd  .gitignore  BUILD.bazel  MODULE.bazel  README.md  compile_commands.json  docker-compose.yaml  line.txt  run_container.sh  test.cc
DataFlow/: BUILD.bazel  __init__.py
DataFlow/csrc/: BUILD.bazel  module.cc  module.h
DataFlow/csrc/batch/: BUILD.bazel  batch_row_area.cc  batch_row_area.h
DataFlow/csrc/bind_python/: add_core.cc  add_data_objects.cc  add_data_pipelines.cc  add_pipelines.cc  add_streams.cc
DataFlow/csrc/common/: BUILD.bazel  batch_area.cc.bak  batch_area.h.bak  exceptions.cc  exceptions.h  functions.h  macros.h  mmap_buddy_allocator.h
DataFlow/csrc/core/: BUILD.bazel  data_object.h  data_pipeline.h  data_pipeline_iterator.cc  stream.h
DataFlow/csrc/data_objects/: BUILD.bazel  byte_stream.h  inflate_stream.h
DataFlow/csrc/data_pipelines/: BUILD.bazel  data_decompressor.h  data_reader.h
DataFlow/csrc/pipelines/: BUILD.bazel  data_batch_row_adder.cc  data_batch_row_adder.h  data_batch_row_column_adder.h  data_batch_row_filter.h  data_batcher.cc  data_batcher.h  data_decompressor.cc  data_decompressor.h  data_reader.cc  data_reader.h  data_record_io_parser.h  data_text_parser.cc  data_text_parser.h
DataFlow/csrc/streams/: BUILD.bazel  batch.cc  batch.h  batch_row.cc  batch_row.h  batch_stream.h  byte_stream.cc  byte_stream.h  inflate_stream.cc  inflate_stream.h  string_stream.cc  string_stream.h
DataFlow/data_objects/: BUILD.bazel  __init__.py  byte_stream.py  inflate_stream.py
DataFlow/data_pipelines/: BUILD.bazel  __init__.py
DataFlow/pipeline/: BUILD.bazel  __init__.py  data_batch_row_adder.py  data_batcher.py  data_decompressor.py  data_reader.py  data_text_parser.py
DataFlow/stream/: BUILD.bazel  __init__.py  batch.py  batch_row.py  byte_stream.py  inflate_stream.py  string_stream.py
DataFlow/utils/: BUILD.bazel  __init__.py  api_export.py
cuda/kernels/: BUILD.bazel  main.cc  test_kernel.cu
cuda/sgemm/: BUILD.bazel  add_simd.cc  sgemm_kernel.cu  sgemm_kernel.cuh  sgemm_v1.cc
dockerfiles/: Dockerfile.develop  Dockerfile.gpu  build.sh
docs/: copilot.md
docs/note/: pytorch.md
scripts/: clang-format.sh  cloc.sh
test/: BUILD.bazel  pybind_module_test.py
test/cc/: BUILD.bazel  test.cc
test/python/: BUILD.bazel  test_batch_row.py  test_data_pipeline.py  test_data_text_parser.py
test/utils/: prepare_text_sample_tool.py  read_gzip_file.py  text_sample_v2.gz.bak
toolchain/: cc_toolchain_config.bzl
