load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "DataFlow",
    srcs = [
        "__init__.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//DataFlow/stream:stream_py",
        "//DataFlow/pipeline:data_pipelines_py",
        "//DataFlow/utils",
    ],
)
