load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library")

pybind_extension(
    name = "pybind_module",
    srcs = glob(["bind_python/*.cc"]) + [
        "module.cc",
        "module.h",
    ],
    copts = ["-g"],
    cxxopts = ["-g"],
    visibility = ["//visibility:public"],
    deps = [
        "//DataFlow/csrc/core",
        "//DataFlow/csrc/streams",
        "//DataFlow/csrc/pipelines",
    ],
)

py_library(
    name = "pybind_module_py",
    srcs = ["__init__.py"],
    data = [
        ":pybind_module",
    ],
    visibility = ["//visibility:public"],
    deps = ["//DataFlow/utils"],
)
