load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_batch_row",
    srcs = ["test_batch_row.py"],
    deps = [
        "//DataFlow",
    ],
)

py_test(
    name = "test_data_pipeline",
    srcs = ["test_data_pipeline.py"],
    deps = [
        "//DataFlow",
        "@pypi//numpy",
    ],
)
