load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "common",
    srcs = glob(
        ["*.cc"],
        allow_empty = True,
    ),
    hdrs = glob(["*.h"]),
    copts = ["-g"],
    cxxopts = ["-g"],
    visibility = ["//visibility:public"],
    deps = [
        "@libbacktrace",
        "@libunwind",
    ],
)
