load("@pybind11_bazel//:build_defs.bzl", "pybind_library")

pybind_library(
    name = "core",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    copts = ["-g"],
    visibility = ["//visibility:public"],
    deps = [
        "//DataFlow/csrc/common",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings:str_format",
        "@glog",
    ],
    alwayslink = True,
)
