load("@pybind11_bazel//:build_defs.bzl", "pybind_library")

pybind_library(
    name = "data_objects",
    #srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"]),
    copts = ["-g"],
    visibility = ["//visibility:public"],
    deps = [
        "//DataFlow/csrc/core",
        "@zlib",
    ],
    alwayslink = True,
)
