load("@pybind11_bazel//:build_defs.bzl", "pybind_library")

pybind_library(
    name = "pipelines",
    srcs = glob(["*.cc"], allow_empty = True),
    hdrs = glob(["*.h"]),
    copts = ["-g"],
    visibility = ["//visibility:public"],
    deps = [
        "//DataFlow/csrc/common",
        "//DataFlow/csrc/core",
    ],
    alwayslink = True,
)
